# redstone-simulator

./: .gitignore  Cargo.toml  README.md  output.gv  rust-toolchain.toml
benches/: bench.rs  stress.rs
resources/: solid.txt  transparent.txt
schematics/: 8bit_cpu_1.1.schem  adder.schem  adder_1.schem  adder_2.schem  adder_3.schem  adder_4.schem  adder_5.schem  adder_6.schem  adder_6b.schem  adder_6c.schem  adder_6d.schem  adder_6e.schem  adder_6f.schem  adder_6g.schem  adder_6h.schem  adder_7.schem  cmp_cycle.schem  cmp_entity.schem  cmp_prune.schem  comparator.schem  comparator_inputs.schem  comparator_strengths.schem  comparator_strengths2.schem  comparator_strengths3.schem  comparator_stress.schem  connections.schem  cpu_fib.schem  cycle.schem  glass.schem  indirect.schem  locking.schem  power_block_with_1_strength.schem  redstone_block.schem  redstone_connectivity.schem  redstone_split.schem  register.schem  repeater.schem  repeater_1t.schem  repeater_2t.schem  repeater_3t.schem  (+16 more)
src/: block.rs  construction_block.rs  facing.rs  lib.rs  main.rs  schematic.rs  test_macro.rs  world.rs  world_data.rs  world_logic.rs  world_prune.rs
src/blocks/: air.rs  comparator.rs  facing.rs  mod.rs  probe.rs  redstone.rs  redstone_block.rs  repeater.rs  scomparator.rs  solid.rs  srepeater.rs  telescope.rs  torch.rs  trigger.rs
tests/: adder.rs  comparator.rs  connection.rs  cpu.rs  glass.rs  on_inputs.rs  redstone_block.rs  repeater.rs  repeater_lock.rs  scomparator.rs  steady.rs  telescope.rs  test_glass.rs  test_repeater.rs  test_steady.rs  test_torch.rs  torch.rs
(+24 files in other folders)
