[package]
name = "redstone-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hematite-nbt = "0.5.2"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
bimap = "0.6.3"
itertools = "0.10.5"
once_cell = "1.17.1"