[package]
name = "redstone-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
hematite-nbt = "0.5.2"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
itertools = "0.10.5"
once_cell = "1.17.1"
petgraph = "0.6.3"
bumpalo = "3.12.2"
clap = { version = "4.2.7", features = ["derive"] }
vcd = "0.6.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "stress"
harness = false

[profile.release]
lto = true
